@@ -1,3 +1,8 @@
+To: [% email %]
+From: Barbie <barbie@cpantesters.org>
+Subject: Non-Standard Formatted CPAN Uploads
+Date: [% date %]
+
 Dear CPAN Author,
 
 It has been noted that one or more uploads recently were incorrectly
@@ -7,7 +12,10 @@ are unable to record your uploads.
 
 The upload messages in question are:
 
-[% content -%]
+[% uploads -%]
+
+[% IF others -%]Other failed uploads:
+[% others ; END -%]
 
 The number at the beginning of the line is the NNTP ID of the message as 
 recorded by the CPAN testers NNTP server, and can be seen by searching 
